# gfold_lr

./: CIGARreader.h  CMakeLists.txt  DataProcessor.h  GFOLD.h  GeneInfo.h  README.md  Utility.h  main.cpp
doc/: gfold.html
